--- a/LidarImageFusion/mls_test/CMakeLists.txt
+++ b/LidarImageFusion/mls_test/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
 project(resampling)
 
+set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
+
 find_package(PCL 1.2 REQUIRED)
 
 include_directories(${PCL_INCLUDE_DIRS})
