update fusion node

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Mac
 **/.DS_Store
 
+#---------------vscode-------------
+**/.vscode
+
+
 # ----------------C------------------
 # Prerequisites
 *.d
