--- a/SensorFusion/fusion_ws/src/lidar_camera_fusion/package.xml
+++ b/SensorFusion/fusion_ws/src/lidar_camera_fusion/package.xml
@@ -13,25 +13,13 @@
 
     <license> BSD </license>
 
-
     <buildtool_depend>catkin</buildtool_depend>
 
-    <build_depend>cv_bridge</build_depend>
-    <build_depend>image_transport</build_depend>
-    <build_depend>pcl_conversions</build_depend>
-    <build_depend>pcl_ros</build_depend>
-    <build_depend>roscpp</build_depend>
-    <build_depend>tf</build_depend>
-
-    <exec_depend>cv_bridge</exec_depend>
-    <exec_depend>image_transport</exec_depend>
-    <exec_depend>pcl_conversions</exec_depend>
-    <exec_depend>pcl_ros</exec_depend>
-    <exec_depend>roscpp</exec_depend>
-    <exec_depend>tf</exec_depend>>
-
-    <!-- <test_depend></test_depend> -->
-
-    <!-- <doc_depend></doc_depend> -->
+    <depend> cv_bridge </depend>
+    <depend> image_transport </depend>
+    <depend> pcl_conversions </depend>
+    <depend> pcl_ros </depend>
+    <depend> roscpp </depend>
+    <depend> tf </depend>
 
 </package>
