--- a/SemanticMap/semantic_map_ws/src/lidar_camera_fusion_pre/package.xml
+++ b/SemanticMap/semantic_map_ws/src/lidar_camera_fusion_pre/package.xml
@@ -1,5 +1,5 @@
 <package format = "2">
-    <name> lidar_camera_fusion </name>
+    <name> lidar_camera_fusion_pre </name>
 
     <version> 1.0.0 </version>
 
