--- a/ROS/ROSDebug/debug_ws/src/learning_debug/CMakeLists.txt
+++ b/ROS/ROSDebug/debug_ws/src/learning_debug/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(learning_tf2)
+project(learning_debug)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -10,9 +10,7 @@ project(learning_tf2)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
-  tf2
-  tf2_ros
-  turtlesim
+  std_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -72,7 +70,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
+#   std_msgs
 # )
 
 ################################################
@@ -106,8 +104,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES learning_tf2
-#  CATKIN_DEPENDS roscpp rospy tf2 tf2_ros turtlesim
+#  LIBRARIES learning_debug
+#  CATKIN_DEPENDS roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
@@ -124,7 +122,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/learning_tf2.cpp
+#   src/${PROJECT_NAME}/learning_debug.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -135,7 +133,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/learning_tf2_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/learning_debug_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -199,7 +197,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_learning_tf2.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_learning_debug.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
@@ -207,17 +205,11 @@ include_directories(
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
 
-add_executable(tf2_static_broadcaster src/tf2_static_broadcaster.cpp)
-target_link_libraries(tf2_static_broadcaster  ${catkin_LIBRARIES} )
+
+SET(CMAKE_BUILD_TYPE "Debug")
+SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
+SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
+
 
 add_executable(debug_test src/debug_test.cpp)
 target_link_libraries(debug_test  ${catkin_LIBRARIES} )
-
-add_executable(turtle_tf2_broadcaster src/turtle_tf2_broadcaster.cpp)
-target_link_libraries(turtle_tf2_broadcaster ${catkin_LIBRARIES})
-
-add_executable(turtle_tf2_listener src/turtle_tf2_listener.cpp)
-target_link_libraries(turtle_tf2_listener ${catkin_LIBRARIES})
-
-add_executable(frame_tf2_broadcaster src/frame_tf2_broadcaster.cpp)
-target_link_libraries(frame_tf2_broadcaster ${catkin_LIBRARIES})
