--- a/SemanticMap/octomap_generator_ws/src/lidar_camera_fusion/package.xml
+++ b/SemanticMap/octomap_generator_ws/src/lidar_camera_fusion/package.xml
@@ -22,4 +22,9 @@
     <depend> roscpp </depend>
     <depend> tf </depend>
 
+    <build_depend>semantic_msg</build_depend>
+    <exec_depend>semantic_msg</exec_depend>
+
+    <depend> std_msgs </depend>
+
 </package>
