--- a/SemanticMap/octomap_generator_ws/src/octomap_generator/package.xml
+++ b/SemanticMap/octomap_generator_ws/src/octomap_generator/package.xml
@@ -22,6 +22,8 @@
   <build_depend>octomap_msgs</build_depend>
   <build_depend>libpcl-all-dev</build_depend>
 
+  <build_depend>scout_msgs</build_depend>
+
    <exec_depend>roscpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
@@ -30,5 +32,8 @@
    <exec_depend>octomap</exec_depend>
    <exec_depend>octomap_msgs</exec_depend>
    <exec_depend>libpcl-all</exec_depend>
+   <exec_depend>scout_msgs</exec_depend>
+
+   <depend> std_msgs </depend>
 
 </package>
