--- a/SemanticMap/octomap_generator_ws/src/semantic_msg/CMakeLists.txt
+++ b/SemanticMap/octomap_generator_ws/src/semantic_msg/CMakeLists.txt
@@ -8,11 +8,12 @@ project(semantic_msg)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  roscpp 
-  rospy 
-  rospy_tutorials
+  cv_bridge
+  roscpp
+  rospy
   sensor_msgs
   std_msgs
+  rospy_tutorials
   message_generation
 )
 
@@ -73,8 +74,8 @@ add_message_files(
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
     DEPENDENCIES
-    std_msgs
     sensor_msgs
+    std_msgs
     rospy_tutorials
 )
 
@@ -108,10 +109,16 @@ generate_messages(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-   #INCLUDE_DIRS include
-   #LIBRARIES semantic_msg
-   CATKIN_DEPENDS message_runtime rospy_tutorials sensor_msgs std_msgs 
-   #DEPENDS message_runtime
+    CATKIN_DEPENDS
+    message_runtime
+    cv_bridge 
+    roscpp 
+    rospy 
+    sensor_msgs
+#  INCLUDE_DIRS include
+#  LIBRARIES LEDNet
+#  CATKIN_DEPENDS cv_bridge roscpp rospy snesor_msgs
+#  DEPENDS system_lib
 )
 
 ###########
@@ -127,7 +134,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/semantic_msg.cpp
+#   src/${PROJECT_NAME}/LEDNet.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -138,7 +145,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/semantic_msg_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/LEDNet_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -202,7 +209,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_semantic_msg.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_LEDNet.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
