--- a/SemanticMap/octomap_generator_ws/src/octomap_generator/params/octomap_generator.yaml
+++ b/SemanticMap/octomap_generator_ws/src/octomap_generator/params/octomap_generator.yaml
@@ -1,6 +1,7 @@
 octomap:
     pointcloud_topic: "/semantic_cloud_max"
-    tree_type: 1
+    # 0: color tree, 1: max tree, 2: bayes tree
+    tree_type: 2
     world_frame_id: "/camera_init"
     resolution: 0.15
     max_range: 15.0
