--- a/SemanticMap/octomap_generator_ws/src/semantic_msg/package.xml
+++ b/SemanticMap/octomap_generator_ws/src/semantic_msg/package.xml
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/semantic_msg</url> -->
+  <!-- <url type="website">http://wiki.ros.org/lednet</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -49,27 +49,30 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  
+
+  <build_depend>cv_bridge</build_depend>
+  <build_export_depend>cv_bridge</build_export_depend>
+  <exec_depend>cv_bridge</exec_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
-  <build_depend>rospy_tutorials</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
-  
+  <build_depend>message_generation</build_depend>
+
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
-  <build_export_depend>rospy_tutorials</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
-  
+  <build_export_depend>message_generation</build_export_depend>
+
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
-  <exec_depend>rospy_tutorials</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <build_depend>python-numpy</build_depend>
+  <exec_depend>python-numpy</exec_depend>
 
-  <build_depend> message_generation </build_depend>
-  <exec_depend> message_runtime </exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
