--- a/SemanticMap/octomap_generator_ws/src/octomap_generator/params/octomap_generator.yaml
+++ b/SemanticMap/octomap_generator_ws/src/octomap_generator/params/octomap_generator.yaml
@@ -1,7 +1,9 @@
 octomap:
-    pointcloud_topic: "/semantic_cloud_max"
+    max_pointcloud_topic: "/semantic_cloud_max"
+    bayes_pointcloud_topic: "/semantic_cloud_bayes"
+    scout_status: "/scout_status"
     # 0: color tree, 1: max tree, 2: bayes tree
-    tree_type: 2
+    tree_type: 1
     world_frame_id: "/camera_init"
     resolution: 0.15
     max_range: 15.0
