--- a/SemanticMap/octomap_generator_ws/src/semantic_cloud/package.xml
+++ b/SemanticMap/octomap_generator_ws/src/semantic_cloud/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>semantic_msg</name>
+  <name>semantic_cloud</name>
   <version>0.0.0</version>
-  <description>The semantic_msg package</description>
+  <description>The semantic_cloud package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/lednet</url> -->
+  <!-- <url type="website">http://wiki.ros.org/semantic_cloud</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -49,32 +49,17 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-
-  <build_depend>cv_bridge</build_depend>
-  <build_export_depend>cv_bridge</build_export_depend>
-  <exec_depend>cv_bridge</exec_depend>
-  
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>sensor_msgs</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>message_generation</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
-  <build_export_depend>std_msgs</build_export_depend>
-  <build_export_depend>message_generation</build_export_depend>
-
+  
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>message_runtime</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
-  
-  <build_depend>python-numpy</build_depend>
-  <exec_depend>python-numpy</exec_depend>
-
 
 
   <!-- The export tag contains other, unspecified, tags -->
