--- a/SemanticMap/octomap_generator_ws/src/octomap_generator/params/octomap_generator.yaml
+++ b/SemanticMap/octomap_generator_ws/src/octomap_generator/params/octomap_generator.yaml
@@ -1,10 +1,11 @@
 octomap:
     # 0: color tree, 1: max tree, 2: bayes tree
-    tree_type: 2
+    tree_type: 1
     max_pointcloud_topic: "/semantic_cloud_max"
     bayes_pointcloud_topic: "/semantic_cloud_bayes"
     scout_status: "/scout_status"
-    world_frame_id: "/camera_init"
+    # camera_init
+    world_frame_id: "/odom"
     resolution: 0.15
     max_range: 15.0
     raycast_range: 2.0
