--- a/NavigationPlanning/dlonng_ws/src/agilex_navigation/config/costmap_common_params.yaml
+++ b/NavigationPlanning/dlonng_ws/src/agilex_navigation/config/costmap_common_params.yaml
@@ -1,11 +1,17 @@
-obstacle_range: 2.5
-raytrace_range: 3.0
-footprint: [[0.175, 0.175], [0.175, -0.175], [-0.175, -0.175], [-0.175, 0.175]]
+obstacle_range: 5.0
+raytrace_range: 10.0
+footprint: [[0.2475, 0.3125], [0.2475, -0.3125], [-0.2475, -0.3125], [-0.2475, 0.3125]]
 footprint_inflation: 0.01
-robot_radius: 0.175
+#robot_radius: 0.175
 inflation_radius: 0.15
 max_obstacle_height: 0.6
 min_obstacle_height: 0.0
-observation_sources: scan
+
+#observation_sources: laser_scan_sensor
 # 全局和局部规划都使用点云话题 /cloud_topic
-scan: {data_type: PointCloud2, topic: /rslidar_points, marking: true, clearing: true, expected_update_rate: 0}
+#point_cloud_sensor: {data_type: LaserScan, topic: /scan, marking: true, clearing: true, expected_update_rate: 0}
+
+
+observation_sources: point_cloud_sensor
+# 全局和局部规划都使用点云话题 /cloud_topic
+point_cloud_sensor: {sensor_frame: rslidar, data_type: PointCloud2, topic: /rslidar_points, marking: true, clearing: true, expected_update_rate: 0}
