--- a/NavigationPlanning/dlonng_ws/src/agilex_navigation/config/costmap_common_params.yaml
+++ b/NavigationPlanning/dlonng_ws/src/agilex_navigation/config/costmap_common_params.yaml
@@ -7,6 +7,7 @@ inflation_radius: 0.15
 max_obstacle_height: 0.6
 min_obstacle_height: 0.0
 
+# lab1
 #observation_sources: laser_scan_sensor
 # 全局和局部规划都使用点云话题 /cloud_topic
 #point_cloud_sensor: {data_type: LaserScan, topic: /scan, marking: true, clearing: true, expected_update_rate: 0}
