--- a/NavigationPlanning/dlonng_ws/src/octomap_generator/package.xml
+++ b/NavigationPlanning/dlonng_ws/src/octomap_generator/package.xml
@@ -18,22 +18,26 @@
   <build_depend>pcl_conversions</build_depend>
   <build_depend>std_srvs</build_depend>
   <build_depend>octomap</build_depend>
-
   <build_depend>octomap_msgs</build_depend>
-  <build_depend>libpcl-all-dev</build_depend>
+  <build_depend>octomap_ros</build_depend>
+  <build_depend>nav_msgs</build_depend>
 
+  
+  <build_depend>libpcl-all-dev</build_depend>
   <build_depend>scout_msgs</build_depend>
 
-   <exec_depend>roscpp</exec_depend>
-   <exec_depend>sensor_msgs</exec_depend>
-   <exec_depend>pcl_ros</exec_depend>
-   <exec_depend>pcl_conversions</exec_depend>
-   <exec_depend>std_srvs</exec_depend>
-   <exec_depend>octomap</exec_depend>
-   <exec_depend>octomap_msgs</exec_depend>
-   <exec_depend>libpcl-all</exec_depend>
-   <exec_depend>scout_msgs</exec_depend>
+  <exec_depend>roscpp</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>pcl_ros</exec_depend>
+  <exec_depend>pcl_conversions</exec_depend>
+  <exec_depend>std_srvs</exec_depend>
+  <exec_depend>octomap</exec_depend>
+  <exec_depend>octomap_msgs</exec_depend>
+  <exec_depend>octomap_ros</exec_depend>
+  <exec_depend>libpcl-all</exec_depend>
+  <exec_depend>scout_msgs</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
 
-   <depend> std_msgs </depend>
+  <depend> std_msgs </depend>
 
 </package>
