--- a/NavigationPlanning/dlonng_ws/src/octomap_generator/package.xml
+++ b/NavigationPlanning/dlonng_ws/src/octomap_generator/package.xml
@@ -13,6 +13,8 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>roscpp</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>visualization_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>pcl_conversions</build_depend>
@@ -21,12 +23,13 @@
   <build_depend>octomap_msgs</build_depend>
   <build_depend>octomap_ros</build_depend>
   <build_depend>nav_msgs</build_depend>
-
-  
-  <build_depend>libpcl-all-dev</build_depend>
+  <build_depend>nodelet</build_depend>
   <build_depend>scout_msgs</build_depend>
+  <build_depend>libpcl-all-dev</build_depend>
 
   <exec_depend>roscpp</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>visualization_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>pcl_ros</exec_depend>
   <exec_depend>pcl_conversions</exec_depend>
@@ -34,10 +37,10 @@
   <exec_depend>octomap</exec_depend>
   <exec_depend>octomap_msgs</exec_depend>
   <exec_depend>octomap_ros</exec_depend>
-  <exec_depend>libpcl-all</exec_depend>
   <exec_depend>scout_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
+  <exec_depend>nodelet</exec_depend>
 
-  <depend> std_msgs </depend>
+  <exec_depend>libpcl-all</exec_depend>
 
 </package>
