--- a/NavigationPlanning/dlonng_ws/src/octomap_generator/params/octomap_generator.yaml
+++ b/NavigationPlanning/dlonng_ws/src/octomap_generator/params/octomap_generator.yaml
@@ -1,10 +1,10 @@
 octomap:
     # 0: color tree, 1: max tree, 2: bayes tree
-    tree_type: 2
+    tree_type: 1
     max_pointcloud_topic: "/semantic_cloud_max"
     bayes_pointcloud_topic: "/semantic_cloud_bayes"
     scout_status: "/scout_status"
-    world_frame_id: "/camera_init"
+    world_frame_id: "/odom"
     resolution: 0.10
     max_range: 15.0
     raycast_range: 2.0
@@ -13,6 +13,6 @@ octomap:
     occupancy_thres: 0.5
     prob_hit: 0.7
     prob_miss: 0.4
-    save_path : "~/map.bt"
+    save_path : "/home/dlonng/map.ot"
     outrem_radius: 1.0
     outrem_neighbors: 10
