--- a/NavigationPlanning/dlonng_ws/src/octomap_generator/params/octomap_generator.yaml
+++ b/NavigationPlanning/dlonng_ws/src/octomap_generator/params/octomap_generator.yaml
@@ -4,7 +4,7 @@ octomap:
     max_pointcloud_topic: "/semantic_cloud_max"
     bayes_pointcloud_topic: "/semantic_cloud_bayes"
     scout_status: "/scout_status"
-    world_frame_id: "/odom"
+    world_frame_id: "/map" #/odom
     resolution: 0.10
     max_range: 15.0
     raycast_range: 2.0
