--- a/NavigationPlanning/dlonng_ws/src/agilex_navigation/config/gazebo/base_local_planner_params.yaml
+++ b/NavigationPlanning/dlonng_ws/src/agilex_navigation/config/gazebo/base_local_planner_params.yaml
@@ -1,5 +1,6 @@
+# 速度和加速度限制需要搞清楚！
 TrajectoryPlannerROS:
-  max_vel_x: 0.45
+  max_vel_x: 0.3
   min_vel_x: 0.1
   max_vel_theta: 1.0
   min_in_place_vel_theta: 0.4
