--- a/NavigationPlanning/dlonng_ws/src/agilex_navigation/config/gazebo/global_costmap_params.yaml
+++ b/NavigationPlanning/dlonng_ws/src/agilex_navigation/config/gazebo/global_costmap_params.yaml
@@ -1,18 +1,28 @@
 global_costmap:
    global_frame: /map
    robot_base_frame: base_link
+   # TF 的容忍度，可以设置的大一些，需要考虑系统 tf_monitor base_link -> map 的 tf 延迟
+   # rosrun tf tf_monitor /base_link /map
+   transform_tolerance: 2.0
+
    # 数值越大 CPU 负担会越重，特别对于全局地图，通常设定一个相对较小、在 1.0 到 5.0 之间
-   update_frequency: 2.0
+   update_frequency: 1.0
    # 参数确定代价地图发布可视化信息的频率，用于在 RVIZ 中可视化，可以设置的低一些
    publish_frequency: 1.0
+
    # 确定是否由 map_server 提供的地图服务来进行代价地图的初始化
    # 如果您没有使用现有的地图或地图服务器，将 static_map 参数设置为 false
    # 当本地地图需要根据传感器数据动态更新的时候，我们通常会把这个参数设为 false
    static_map: false
    rolling_window: false
-   resolution: 0.1
-   # TF 的容忍度，可以设置的大一些，需要考虑系统 tf_monitor base_link -> map 的 tf 延迟
-   # rosrun tf tf_monitor /base_link /map
-   transform_tolerance: 1.0
+
+   width: 12.0
+   height: 12.0
+
    # voxel_grid
-   map_type: costmap
+   #map_type: costmap
+
+   plugins:
+      - {name: static_layer,                type: "costmap_2d::StaticLayer"}
+      #- {name: obstacle_layer,              type: "costmap_2d::ObstacleLayer"}
+      - {name: global_inflation_layer,      type: "costmap_2d::InflationLayer"}
