--- a/NavigationPlanning/dlonng_ws/src/agilex_navigation/config/gazebo/local_costmap_params.yaml
+++ b/NavigationPlanning/dlonng_ws/src/agilex_navigation/config/gazebo/local_costmap_params.yaml
@@ -2,7 +2,9 @@ local_costmap:
   global_frame: /odom
   #global_frame: /camera_init
   robot_base_frame: base_link
-  update_frequency: 2.0
+  transform_tolerance: 2.0
+
+  update_frequency: 3.0
   publish_frequency: 1.0
   static_map: false
   #  设置为 true 意味着当机器人移动时，保持机器人在本地代价地图中心
@@ -10,4 +12,7 @@ local_costmap:
   # 设置本地代价地图（滑动地图）的宽度（米），高度（米）和分辨率（米 / 单元格）
   width: 6.0
   height: 6.0
-  resolution: 0.1
+
+  plugins:
+    - {name: obstacle_layer,              type: "costmap_2d::ObstacleLayer"}
+    - {name: local_inflation_layer,       type: "costmap_2d::InflationLayer"}
