--- a/NavigationPlanning/dlonng_ws/src/agilex_navigation/config/gazebo/costmap_common_params.yaml
+++ b/NavigationPlanning/dlonng_ws/src/agilex_navigation/config/gazebo/costmap_common_params.yaml
@@ -10,7 +10,7 @@ static_layer:
     unknown_cost_value: -1
     lethal_cost_threshold: 100
     # 是否需要呢？ 这个参数不是很明白
-    map_topic: /projected_map
+    map_topic: /map
     first_map_only: false
     # subscribe map_topic_updates = /projected_map_updates
     # 自己的地图会自动更新
@@ -25,7 +25,7 @@ obstacle_layer:
     observation_sources: point_cloud_sensor
     point_cloud_sensor: {
         topic: /dlonng_no_ground_cloud, # 这个应该换成预处理后滤除地面的点云
-        sensor_frame: rslidar,
+        sensor_frame: base_link,
         data_type: PointCloud2,
         observation_persistence: 0.0,
         expected_update_rate: 0.0, # 0.0 的值允许无限时间间隔读取
@@ -62,11 +62,11 @@ global_inflation_layer:
     # 膨胀半径，机器人与障碍物的最大安全距离 0.15m = 15cm
     # 如果机器人不能很好地通过窄门或其它狭窄的地方，则稍微减小这个值
     # 相反地，如果机器人不断地撞到东西，则尝试增大这个值
-    inflation_radius: 0.15
+    inflation_radius: 0.10
     cost_scaling_factor: 2.0
 
 # http://wiki.ros.org/costmap_2d/hydro/inflation
 local_inflation_layer:
     enable: true
-    inflation_radius: 0.15
+    inflation_radius: 0.10
     cost_scaling_factor: 5.0
