--- a/NavigationPlanning/dlonng_ws/src/agilex_navigation/config/gazebo/local_costmap_params.yaml
+++ b/NavigationPlanning/dlonng_ws/src/agilex_navigation/config/gazebo/local_costmap_params.yaml
@@ -1,10 +1,10 @@
 local_costmap:  
-  global_frame: /odom
+  global_frame: /map
   #global_frame: /camera_init
   robot_base_frame: base_link
   transform_tolerance: 2.0
 
-  update_frequency: 3.0
+  update_frequency: 2.0
   publish_frequency: 1.0
   static_map: false
   #  设置为 true 意味着当机器人移动时，保持机器人在本地代价地图中心
